navbar auto collapse fixed

--- a/css/base.css
+++ b/css/base.css
@@ -64,7 +64,7 @@ table {
 ================================================== */
 body {
     background: #fff;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-weight: 400;
     font-size: 13px;
     line-height: 26px;
@@ -84,7 +84,7 @@ html {
 ================================================== */
 h1, h2, h3, h4, h5, h6 {
     color: #414141;
-    font-family: 'Titillium Web', sans-serif;
+    /* font-family: 'Titillium Web', sans-serif; */
     text-align: center;
 }
 
