--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -27,7 +27,7 @@
  * -------------------------- */
  @font-face {
     font-family: 'FontAwesome';
-    src: url('font/fontawesome-webfont.eot?v=3.0.1');
+    src: url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap%27);');
     src: url('font/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'),
       url('font/fontawesome-webfont.woff?v=3.0.1') format('woff'),
       url('font/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
